# shout

./: LICENSE  README.md
src/frontend/tui/: Cargo.toml  README.md
src/frontend/tui/src/: app.rs  main.rs
src/frontend/tui/src/api/: mod.rs
src/frontend/tui/src/events/: mod.rs  navigation.rs
src/frontend/tui/src/models/: channel.rs  message.rs  mod.rs  screen.rs  server.rs  user.rs
src/frontend/tui/src/screens/: chat.rs  friends.rs  mod.rs  profile.rs
src/frontend/tui/src/ui/: footer.rs  main_content.rs  mod.rs  navbar.rs
src/frontend/tui/src/ui/components/: chat.rs  footer.rs  friends.rs  header.rs  mod.rs  profile.rs
src/frontend/tui/src/ui/utils/: datetime.rs  mod.rs  select_state.rs
src/frontend/tui/src/ui/widgets/: button.rs  input_field.rs  mod.rs  radio_button.rs  radio_selection.rs
